--- a/R/field_data_collection_tracker.Rmd
+++ b/R/field_data_collection_tracker.Rmd
@@ -90,7 +90,8 @@ cl_log_change_response <- df_cl_log %>%
     filter(change_type == "change_response", 
            !is.na(new_value),
            # reviewed == 1, 
-           change_type != "no_action", 
+           change_type != "no_action",
+           !str_detect(string = question, "\\/")
     ) %>% 
     select(uuid, question, new_value)
 
